# kernel-hook-syscalls

./: .gitignore  .gitmodules  CMakeLists.txt  Client.cpp  Client.h  Makefile  config.h  fnla.c  fnla.cpp  fnla.h  hacktask.c  hacktask.h  kallsyms.c  kallsyms.h  kprobe_all.c  kprobe_all.h  log.c  log.h  main.cpp  mmuhack.c  mmuhack.h  mydaat.c  mydaat.h  server.c  server.h  syscalls.c  syscalls.h
Commands/: TraceLog.cpp  TraceLog.h
Parser/: Parser.cpp  Parser.h  Syscalls.cpp  Syscalls.h
dustbin/: kmem.c  kmem.h
tests/: aio.cpp  xattr.cpp
